--- a/teleported/themes/hugo-theme-minos/layouts/partials/article.html
+++ b/teleported/themes/hugo-theme-minos/layouts/partials/article.html
@@ -15,7 +15,7 @@
                 <div class="article-category">
                     {{ range $i, $e := .Params.categories }}
                     {{ if gt $i 0 }}
-                    <span>&gt;</span>
+                    <span>|</span>
                     {{ end }}
                     <a class="article-category-link" href="{{ $Site.BaseURL }}/categories/{{ $e | urlize }}">{{ $e }}</a>
                     {{ end }}
