--- a/teleported/themes/hugo-theme-minos/layouts/partials/footer.html
+++ b/teleported/themes/hugo-theme-minos/layouts/partials/footer.html
@@ -1,7 +1,8 @@
 <footer id="footer">
     <div class="outer">
         <div id="footer-info" class="inner">
-            &copy; {{ now.Format "2006"}} {{ or .Site.Author .Site.Title }}&nbsp;
+            <!-- &copy; {{ now.Format "2006"}} {{ or .Site.Author .Site.Title }}&nbsp; -->
+            &copy; {{ now.Format "2006"}} <a href="https://www.linkedin.com/in/anandsaha/">Anand Saha</a> &nbsp; 
             Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> with theme <a href="https://github.com/carsonip/hugo-theme-minos">Minos</a>
         </div>
     </div>
