--- a/teleported/themes/hugo-theme-minos/layouts/partials/head.html
+++ b/teleported/themes/hugo-theme-minos/layouts/partials/head.html
@@ -8,7 +8,7 @@
     {{ partial "og.html" . }}
 
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/favicon.ico">
 
     <link href="{{ .Site.BaseURL }}webfonts/ptserif/main.css" rel='stylesheet' type='text/css'>
     <link href="{{ .Site.BaseURL }}webfonts/source-code-pro/main.css" rel="stylesheet" type="text/css">
