--- a/teleported/themes/hugo-theme-minos/layouts/index.html
+++ b/teleported/themes/hugo-theme-minos/layouts/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="article-entry" itemprop="articleBody">
                     <p>
-                        {{ if .Params.featuredImage }}<img src="{{.Params.featuredImage}}"><br>{{ end }}
+                        {{ if .Params.featuredImage }}<img style="float:left; padding: 25px 10px 0px 0px; width:100px" src="{{.Params.featuredImage}}"><br>{{ end }}
                     {{ .Summary }}
                     </p>
                     <p class="article-more-link">
