--- a/teleported/themes/hugo-theme-minos/layouts/partials/head.html
+++ b/teleported/themes/hugo-theme-minos/layouts/partials/head.html
@@ -14,6 +14,7 @@
     <link href="{{ .Site.BaseURL }}webfonts/source-code-pro/main.css" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
     <link href="http://gmpg.org/xfn/11" rel="profile">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
