--- a/teleported/themes/hugo-theme-minos/layouts/partials/header.html
+++ b/teleported/themes/hugo-theme-minos/layouts/partials/header.html
@@ -2,10 +2,10 @@
     <div id="header-outer" class="outer">
         <div id="header-inner" class="inner">
             <a id="main-nav-toggle" class="nav-icon" href="javascript:;"></a>
-            <a id="logo" class="logo-text" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+            <a id="logo" class="logo-text" style="font-family: 'Open Sans', sans-serif;" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
             <nav id="main-nav">
                 {{ range .Site.Menus.main }}
-                <a class="main-nav-link" href="{{ .URL }}">{{ .Name }}</a>
+                <a style="font-family: 'Open Sans', sans-serif;" class="main-nav-link" href="{{ .URL }}">{{ .Name }}</a>
                 {{ end }}
             </nav>
             <nav id="sub-nav">
@@ -14,8 +14,8 @@
             </nav>
         </div>
         <div style="margin-top:-10px; padding-bottom:5px">
-        <label style="font-family: Arial, Georgia;color:#555555">
-            My notes on AI and ML. Mostly intuitions and concepts.</label>
+        <label style="font-family: 'Open Sans', sans-serif;color:#555555">
+            Deep learning concepts. Tools and techniques.</label>
         </div>
     </div>
 </header>
